tests/rt/pos/ifc/listToTuple-labeled01.trp
listToTuple [1 raisedTo `{alice}`, 2 raisedTo `{alice}`, 3 raisedTo `{alice}`]