tests/rt/neg/core/listToTuple_neg.trp
listToTuple (1, 2, 3)